1. html 코드 변경에 따른 jsp 파일 최신화 2. html 코드 내 form의 action태그 , method태그 변경 / a href, window 등 이동 태그 url 변경 3. gitignore 수정

--- a/WebContent/html/join_step.html
+++ b/WebContent/html/join_step.html
@@ -35,12 +35,12 @@
                 </div>
                 <div>
                     <div class="jns_btn_box">
-                        <a href="./join_last_step.html">
+                        <a href="./signup.jsp">
                             <input class="join_nextStep_btn btn_ap" type="button" value="일반 회원가입">
                         </a>
                     </div>
                     <div class="lo_btn_box">
-                        <a href="./login.html">
+                        <a href="./login.jsp">
                             <input class="gotoLogin_btn btn_ap" type="button" value="로그인">
                         </a>
                     </div>
