--- a/WebContent/html/findID.html
+++ b/WebContent/html/findID.html
@@ -30,7 +30,7 @@
         </div>
         <section>
             <div class="findID_wrap">
-                <form action="../../src/main/java/member/find/" method="get">
+                <form action="/ridibooks/find/controller" method="get">
                     <span class="findID_hd_text">아이디 찾기</span>
                     <div class="ip_box findID_ip_box">
                         <label class="findID_ip_label" for="">
