--- a/WebContent/html/join_last_step.html
+++ b/WebContent/html/join_last_step.html
@@ -30,7 +30,7 @@
         </div>
         <section>
             <div class="join_wrap">
-                <form action="../../src/main/java/member/SignupController.java" method="post" class="join_form">
+                <form action="/ridibooks/signup/controller" method="post" class="join_form">
                     <div class="join_ip_wrapper">
                         <div class="join_id_wrapper">
                             <div>
